# distance-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: baseline.py  large_geotiff_route.py
examples/: barrier_back_direction_replay.py  barrier_detour.py  five_mile_route.py  large_geotiff_route.py  maze_route.py  mega_geotiff_comparison.py  real_example.py  ridge_pass_showcase.py  zig_zag_comparison.py
notes/: architecture.md
python/distance_rs/: __init__.py  _distance.py  _geo.py  _native.pyi  baselines.py  metrics.py  plotting.py
src/: barriers.rs  grid.rs  grid_segment.rs  lib.rs  math.rs  path.rs  python.rs  solver.rs  updates.rs  vertical.rs
tests/: test_distance.py  test_geo.py
