[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "distance-rs"
version = "0.1.0"
description = "Rust/PyO3 ordered-upwind distance accumulation tools for raster cost surfaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Doug Mercer" }]
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "pytest>=8.0",
    "ruff>=0.11",
]
whitebox = [
    "whitebox>=2.3",
]
plot = [
    "matplotlib>=3.8",
]

[tool.maturin]
module-name = "distance_rs._native"
python-source = "python"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
