[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "distance-rs"
version = "0.1.0"
description = "Rust/PyO3 ordered-upwind distance accumulation tools for raster cost surfaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Doug Mercer" }]
dependencies = [
    "numpy>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
geo = [
    "fiona>=1.10",
    "rasterio>=1.4",
    "shapely>=2.0",
]

[dependency-groups]
dev = [
    "fiona>=1.10",
    "maturin>=1.8,<2",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "rasterio>=1.4",
    "ruff>=0.11",
    "shapely>=2.0",
]
whitebox = [
    "whitebox>=2.3",
]
plot = [
    "matplotlib>=3.8",
]

[tool.maturin]
module-name = "distance_rs._native"
python-source = "python"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["python"]
extraPaths = ["python"]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
